[gd_scene load_steps=11 format=2]

[ext_resource path="res://smol_frogling.png" type="Texture" id=1]
[ext_resource path="res://CreatureAI.gd" type="Script" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]
[ext_resource path="res://PlayerController.gd" type="Script" id=4]

[sub_resource type="CapsuleShape2D" id=6]
height = 1.96499

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 67.2225, 6.22031 )

[sub_resource type="Curve2D" id=8]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -979.363, -417.335, 0, 0, 0, 0, -824.055, -311.171, 0, 0, 0, 0, -654.84, -362.422, 0, 0, 0, 0, -369.724, -535.702, 0, 0, 0, 0, -245.71, -756.572, 0, 0, 0, 0, -289.752, -887.141, 0, 0, 0, 0, -632.819, -1014.05, 0, 0, 0, 0, -987.476, -998.187, 0, 0, 0, 0, -1760.53, -818.806, 0, 0, 0, 0, -2154.6, -359.982, 0, 0, 0, 0, -2294.84, 202.566, 0, 0, 0, 0, -1600.59, 295.307, 0, 0, 0, 0, -1039.63, 78.0977, 0, 0, 0, 0, -1547.28, -167.178, 0, 0, 0, 0, -1383.86, -635.764, 0, 0, 0, 0, -1154.37, -563.768, 0, 0, 0, 0, -979.363, -417.335 )
}

[sub_resource type="CapsuleShape2D" id=7]
height = 0.0

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 0,
"values": [  ]
}

[sub_resource type="Animation" id=2]
resource_name = "test"
length = 0.6
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11 ]
}

[node name="Node2D" type="Node2D"]
position = Vector2( 0, 8 )
scale = Vector2( 0.862806, 0.819486 )

[node name="PlayerKinematic" type="KinematicBody2D" parent="."]
position = Vector2( -316.41, -572.31 )
script = ExtResource( 4 )
speed = 250

[node name="User" type="Sprite" parent="PlayerKinematic"]
position = Vector2( -1.76851e-05, 0 )
scale = Vector2( 0.243926, 0.236481 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerKinematic"]
position = Vector2( -1.76851e-05, 0 )
shape = SubResource( 6 )

[node name="PlayerCamera" type="Camera2D" parent="PlayerKinematic"]
position = Vector2( -0.987915, 0.521912 )
rotation = 0.00720679
scale = Vector2( 0.999999, 1 )
current = true
zoom = Vector2( 0.5, 0.5 )

[node name="Area2D" type="Area2D" parent="PlayerKinematic"]

[node name="Eyes" type="CollisionShape2D" parent="PlayerKinematic/Area2D"]
position = Vector2( -66.0634, -6.10352e-05 )
shape = SubResource( 9 )

[node name="Path2D" type="Path2D" parent="."]
curve = SubResource( 8 )
script = ExtResource( 2 )

[node name="follow" type="PathFollow2D" parent="Path2D"]
position = Vector2( -979.363, -417.335 )
rotation = 0.599612
rotate = false

[node name="CreatureKinematic" type="KinematicBody2D" parent="Path2D/follow"]
position = Vector2( 225.945, -48.6403 )
rotation = -0.599612

[node name="CollisionShape2D" type="CollisionShape2D" parent="Path2D/follow/CreatureKinematic"]
position = Vector2( -213, -88 )
shape = SubResource( 7 )
one_way_collision_margin = 0.0

[node name="CreatureTest" type="Sprite" parent="Path2D/follow/CreatureKinematic"]
position = Vector2( -213, -88 )
texture = ExtResource( 1 )
hframes = 13

[node name="AnimationTest" type="AnimationPlayer" parent="Path2D/follow/CreatureKinematic/CreatureTest"]
anims/RESET = SubResource( 1 )
anims/test = SubResource( 2 )
